Changing references and packages

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -35,10 +35,10 @@
 }
 
 @misc{redfin,
-  title = {Real Estate, Homes for Sale, MLS Listings, Agents},
-  author = {{Redfin}},
-  year = {2024},
-  url = {https://www.redfin.com}
+  title = "{Seattle, WA homes for sale & real estate}",
+  author = "{Redfin}",
+  year = 2024,
+  url = "https://www.redfin.com/city/16163/WA/Seattle",
 }
 
 @misc{bankrate,
